syntax = "proto3";

package main;

option go_package = "./;main";

message SaveData {
    repeated Holder holders_set = 1;
    string last_block_number = 2;
}

message Holder {
    string address = 1;
    string amount = 2; // store amounts as strings to handle large numbers
}
